--- a/package.json
+++ b/package.json
@@ -3,25 +3,30 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
- "dependencies": {
+  "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^2.3.6",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.8.8",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.27.2",
-    "framer-motion": "^6.3.3",
+    "axios": "^1.1.3",
+    "cra-template-typescript": "1.2.0",
+    "emotion": "^11.0.0",
+    "framer-motion": "^7.6.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.31.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.15.1",
     "react-router-dom": "5",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
     "styled-components": "^5.3.5",
     "toastify": "^2.0.1",
     "web-vitals": "^2.1.0",
-    "yup": "^0.32.11",    
-    "cra-template-typescript": "1.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
