--- a/package.json
+++ b/package.json
@@ -1,32 +1,19 @@
 {
-  "name": "m6-projeto-front",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
- "dependencies": {
-    "@hookform/resolvers": "^2.8.8",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.27.2",
-    "framer-motion": "^6.3.3",
-    "react-hook-form": "^7.31.0",
-    "react-icons": "^4.3.1",
-    "react-modal": "^3.15.1",
-    "react-router-dom": "5",
-    "react-toastify": "^9.0.1",
-    "styled-components": "^5.3.5",
-    "toastify": "^2.0.1",
-    "web-vitals": "^2.1.0",
-    "yup": "^0.32.11",    
+  "name": "m6-projeto-2",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@craco/craco": "^6.4.5",
     "cra-template-typescript": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "tailwindcss-cli": "^0.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,5 +33,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.7",
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "typescript": "^4.8.4"
   }
 }
